[project]
name = "tmle-explain"
version = "0.1.0"
description = "TMLE explanation video generator with Manim and Chinese TTS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "edge-tts>=7.2.7",
    "manim>=0.19.2",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmle_explain"]
